syntax = "proto3";

option java_package = "io.openmarket.transaction.grpc";
option java_outer_classname = "TransactionProto";

package transaction;

service Transaction {
  rpc Transfer (TransferRequest) returns (TransferResult) {}
  rpc queryTransactionStatus (QueryRequest) returns (QueryResult) {}
}

message QueryRequest {
  string transactionId = 1;
}

message QueryResult {
  string transactionId = 1;
  map<string, double> currencies = 2;
  string createdAt = 3;
  enum Status {
    PENDING = 0;
    CONFIRMED = 1;
    ERROR = 2;
    ROLLBACK = 3;
  }
  Status status = 4;
}

// Request message with user's name
message TransferRequest {
  enum Type {
    TRANSFER = 0;
    PAY = 1;
  }
  Type type = 1;
  string recipientId = 2;
  map<string, double> currencies = 3;
}

// Response message with the greetings
message TransferResult {
  string transactionId = 1;
}